--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -47,6 +47,7 @@ jobs:
         # Set up docker to authenticate
         # via gcloud command-line tool.
         gcloud auth configure-docker
+        gcloud config set project $GKE_PROJECT
       
     # Build the Docker image
     - name: Build
