--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -22,7 +22,7 @@ env:
   GITHUB_SHA: ${{ github.sha }}
   GKE_ZONE: southamerica-east1-b
   GKE_CLUSTER: crucial-cluster
-  IMAGE: laravel
+  IMAGE: laravel_nginx
   REGISTRY_HOSTNAME: gcr.io
   DEPLOYMENT_NAME: laravel-test
 
