--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -63,8 +63,7 @@ jobs:
     # Set up kustomize
     - name: Set up Kustomize
       run: |
-        curl -o kustomize --location https://github.com/kubernetes-sigs/kustomize/releases/download/v3.1.0/kustomize_3.1.0_linux_amd64
-        chmod u+x ./kustomize
+        docker-compose up
 
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
